--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <html>
 <head>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }
+      html {
+        background: url(moooon.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
     </style>
 </head>
 <body>
-<div class="imgbox">
-    <img class="center-fit" src='moooon.jpg'>
-</div>
+<div>hello</div>
 </body>
 </html>
